--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.search-paths={application}
 logging.level.org.springframework.cloud=debug
 logging.level.org.springframework.web=debug
+encrypt.key=MySuperSecretKey
+
