--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,16 @@
             <scope>compile</scope>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
