--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ logging.level.org.springframework.cloud=debug
 logging.level.org.springframework.web=debug
 encrypt.key=MySuperSecretKey
 
+spring.security.user.name=MyUserName
+spring.security.user.password=MySecretPassword
