Bootstrap properties file no longer recommended by spring foundation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ encrypt.key=MySuperSecretKey
 
 spring.security.user.name=MyUserName
 spring.security.user.password=MySecretPassword
+
+eureka.client.serviceUrl.defaultZone=http://netflix:eureka@localhost:8761/eureka
