--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.cloud.config.server.git.uri=https://github.com/gbygrave/mssc-brewery-conf
 spring.cloud.config.server.git.default-label=master
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.search-paths={application}
-logging.level.org.springframework.cloud=debug
-logging.level.org.springframework.web=debug
+#logging.level.org.springframework.cloud=debug
+#logging.level.org.springframework.web=debug
 encrypt.key=MySuperSecretKey
 
 spring.security.user.name=MyUserName
